testdata/baselines/reference/compiler/quantifiedTypesBasic.errors.txt
quantifiedTypesBasic.ts(10,20): error TS2322: Type 'string | number' is not assignable to type 'string'.
  Type 'number' is not assignable to type 'string'.


==== quantifiedTypesBasic.ts (1 errors) ====
    let t0: <T> T = "hello"
    
    let t1: <T> { values: T[], identifier: (value: T) => string } = {
      values: [{ key: "a" }, { key: "b" }, { key: "c" }],
      identifier: v => v.key
    }
    
    let t2: <T> { values: T[], identifier: (value: T) => string } = {
      values: [{ key: "a" }, { key: "b" }, { key: 0 }],
      identifier: v => v.key
                       ~~~~~
!!! error TS2322: Type 'string | number' is not assignable to type 'string'.
!!! error TS2322:   Type 'number' is not assignable to type 'string'.
!!! related TS6502 quantifiedTypesBasic.ts:8:40: The expected type comes from the return type of this signature.
    }
    